syntax = "proto3";

package envoy.extensions.grpc_service.call_credentials.access_token.v3;

option java_package = "io.envoyproxy.envoy.extensions.grpc_service.call_credentials.access_token.v3";
option java_outer_classname = "AccessTokenCredentialsProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: gRPC Access Token Credentials]

// [#not-implemented-hide:]
message AccessTokenCredentials {
  // The access token.
  string token = 1;
}
