syntax = "proto3";

package envoy.extensions.grpc_service.call_credentials.google_compute_engine.v3;

option java_package = "io.envoyproxy.envoy.extensions.grpc_service.call_credentials.google_compute_engine.v3";
option java_outer_classname = "GoogleComputeEngineCredentialsProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: gRPC Google Compute Engine Credentials]

// [#not-implemented-hide:]
message GoogleComputeEngineCredentials {
}
