syntax = "proto3";

package envoy.extensions.grpc_service.call_credentials.google_refresh_token.v3;

option java_package = "io.envoyproxy.envoy.extensions.grpc_service.call_credentials.google_refresh_token.v3";
option java_outer_classname = "GoogleRefreshTokenCredentialsProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: gRPC Google Refresh Token Credentials]

// [#not-implemented-hide:]
message GoogleRefreshTokenCredentials {
  // JSON refresh token.
  string token = 1;
}
