syntax = "proto3";

package envoy.extensions.grpc_service.call_credentials.service_account_jwt_access.v3;

import "google/protobuf/duration.proto";

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.grpc_service.call_credentials.service_account_jwt_access.v3";
option java_outer_classname = "ServiceAccountJwtAccessCredentialsProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/grpc_service/call_credentials/service_account_jwt_access/v3;service_account_jwt_accessv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: gRPC Service Account JWT Access Credentials]

// [#not-implemented-hide:]
message ServiceAccountJwtAccessCredentials {
  // JSON key.
  string json_key = 1;

  // Token lifetime.
  google.protobuf.Duration token_lifetime = 2;
}
