syntax = "proto3";

package envoy.extensions.grpc_service.channel_credentials.google_default.v3;

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.grpc_service.channel_credentials.google_default.v3";
option java_outer_classname = "GoogleDefaultCredentialsProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: gRPC Google Default Credentials]

// [#not-implemented-hide:]
message GoogleDefaultCredentials {
}
