syntax = "proto3";

package envoy.extensions.grpc_service.channel_credentials.local.v3;

option java_package = "io.envoyproxy.envoy.extensions.grpc_service.channel_credentials.local.v3";
option java_outer_classname = "LocalCredentialsProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: gRPC Local Credentials]

// [#not-implemented-hide:]
message LocalCredentials {
}
